--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: python
                  
-sudo: false     
-
+sudo: true
 
 
 before_install:
   - pip install hererocks
   - hererocks env -l5.3 -rlatest    # Use latest LuaRocks, install into 'env' directory.
   - source env/bin/activate          # Add directory with all installed binaries to PATH.
-  - apt-get update
-  - apt-get install build-essential libssl-dev libz-dev m4 gawk
+  - sudo apt-get update
+  - sudo apt-get install -y build-essential libssl-dev libz-dev m4 gawk
   - luarocks install busted && luarocks install penlight 
 
 install:
